<resources>
    <string name="app_name">Eatsie</string>
    <string name="eatsie_logo">Eatsie Logo</string>
    <string name="welcome">Welcome !</string>
    <string name="please_log_in_firts_to_continue">Please log in firts to continue</string>
    <string name="login_image">Login Image</string>
    <string name="email">Email</string>
    <string name="input_your_email">Input Your Email</string>
    <string name="password">Password</string>
    <string name="input_your_password">Input Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_use_an_account">or use an account</string>
    <string name="google_icon">Google Icon</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back To Login</string>
    <string name="forgot_password_image">Forgot Password Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_sign_up_to_your_account">Let’s Sign Up to your account !</string>
    <string name="full_name">Full Name</string>
    <string name="input_your_full_name">Input Your Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="icon_button_back">Icon Button Back</string>
    <string name="image_forgot_password">Image Forgot Password</string>
    <string name="don_t_worry_it_happens_please_enter_the_addres">Don’t worry! It happens. Please enter the addres</string>
    <string name="associated_with_your_account">associated with your account.</string>
    <string name="send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="mau_masak_apa_hari_ini">Mau masak apa hari ini ?</string>
    <string name="search_popular_recipes">Search popular recipes</string>
    <string name="user">User</string>
    <string name="kategori">Kategori</string>
    <string name="what_do_you_want_to_cook_today">What do you want to cook today?</string>
    <string name="welcome_home">Welcome,</string>
    <string name="nusantara">Nusantara</string>
    <string name="internasional">Internasional</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="recommendations">Recommendations</string>
    <string name="category">Category</string>
    <string name="menu_nusantara">Menu Nusantara</string>
    <string name="resep_menu">Resep Menu</string>
    <string name="sate_ayam">Sate Ayam</string>
    <string name="open">Open</string>
    <string name="icon_favorite">Icon Favorite</string>
    <string name="sate">Sate Ayam</string>
    <string name="rendang">Rendang</string>
    <string name="pempek">Pempek</string>
    <string name="soto_madura">Soto Madura</string>
    <string name="menu_favorites">Menu Favorites</string>
    <string name="full_name_profile">Full Name =</string>
    <string name="email_profile">Email =</string>
    <string name="user_example_com">user@example.com</string>
    <string name="edit">Edit</string>
    <string name="image_profile">Image Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="button_back_to_profile">Button Back To Profile</string>
</resources>