<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvHeading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome"
        android:textSize="28sp"
        android:textColor="@color/text_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/please_log_in_firts_to_continue"
        android:textColor="@color/text_header"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading1" />

    <ImageView
        android:id="@+id/ivImageLogin"
        android:layout_width="wrap_content"
        android:layout_height="172dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/login_image"
        android:paddingHorizontal="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading2"
        app:srcCompat="@drawable/login"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvLabelEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email"
        android:textColor="@color/text_header"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImageLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFormInputEmailLogin"
        style="@style/TextInputLayoutCustomStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custome_input"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelEmailLogin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:hint="@string/input_your_email"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            tools:ignore="RtlSymmetry"
            android:inputType="textEmailAddress"
            android:autofillHints="Input Your Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvLabelPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="@color/text_header"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFormInputEmailLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFormInputPasswordLogin"
        style="@style/TextInputLayoutCustomStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custome_input"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelPasswordLogin"
        app:passwordToggleEnabled="true" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:hint="@string/input_your_password"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            tools:ignore="RtlSymmetry"
            android:inputType="textPassword"
            android:autofillHints="Input Your Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/text_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFormInputPasswordLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/cutome_button"
        android:elevation="5dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textColor="@color/text_button"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvLoginAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or_use_an_account"
        android:textColor="#666666"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <LinearLayout
        android:id="@+id/llLoginUsingGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custome_button_google"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginAnAccount"
        tools:ignore="TouchTargetSizeCheck">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/google_icon"
            android:src="@drawable/google_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/google"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTextDontHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLoginUsingGoogle" >

        <TextView
            android:id="@+id/tvTextDontHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/don_t_have_an_account"
            android:textColor="#CC000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTextRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/register"
            android:textColor="@color/orange"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>