<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotActivity">

    <TextView
        android:id="@+id/tvHeading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIconBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/icon_button_back"
        app:layout_constraintEnd_toStartOf="@+id/tvHeading1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivImageForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="172dp"
        android:paddingHorizontal="38dp"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading1"
        app:srcCompat="@drawable/forgot_password"
        android:contentDescription="@string/image_forgot_password" />

    <TextView
        android:id="@+id/tvFirstParagraftForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/don_t_worry_it_happens_please_enter_the_addres"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImageForgotPassword" />

    <TextView
        android:id="@+id/tvSecondParagraftForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/associated_with_your_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstParagraftForgotPassword" />

    <TextView
        android:id="@+id/tvLabelEmailForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email"
        android:textColor="@color/text_header"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondParagraftForgotPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFormInputEmailForgotPassword"
        style="@style/TextInputLayoutCustomStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custome_input"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelEmailForgotPassword">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:hint="@string/input_your_email"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            tools:ignore="RtlSymmetry"
            android:inputType="textEmailAddress"
            android:autofillHints="Input Your Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/cutome_button"
        android:elevation="5dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/send"
        android:textColor="@color/text_button"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFormInputEmailForgotPassword"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>