<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custome_card"
    android:elevation="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="24dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivFood"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sate"
        android:contentDescription="@string/resep_menu" />

    <TextView
        android:id="@+id/tvFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/sate_ayam"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toEndOf="@+id/ivFood"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIconFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/icon_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_favorite"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOpen"
        android:layout_width="99dp"
        android:layout_height="31dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/cutome_button"
        android:elevation="5dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/open"
        android:textColor="@color/text_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIconFavorites"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>